@@ -1,5 +1,6 @@
 alpha
 - Mayhem
+  Added touch and multi-touch support for dragging windows.
   The Thread Updater will pause when offline, and resume when online.
   Fix Chrome's install warning that 4chan X would execute on all domains.
   Fix Quote Backlinks not affecting inlined quotes.
